<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="230dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/background_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/new_level"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/level"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="11dp"
            android:textColor="@android:color/background_dark"/>

        <EditText
            android:id="@+id/new_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/text_field_grey"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/session"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="11dp"
            android:textColor="@android:color/background_dark"/>

        <EditText
            android:id="@+id/session_start_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/text_field_grey"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/session_end_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/text_field_grey"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:textSize="14sp"
        android:text="@string/save"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"/>

</LinearLayout>